--- a/TD5.ipynb
+++ b/TD5.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "R6-nvPcvG1jy"
       },
@@ -301,6 +301,225 @@
       "source": [
         "Cu=Pu/(2*np.pi*N/60)\n",
         "print ('the output torque is: ', Cu, 'Nm')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# exercice 3\n",
+        "Un moteur asynchrone triphasé, 8 pôles, est alimenté par un réseau de tension composée $U = 660\\ V$ ; $50\\ Hz$. La résistance d’un enroulement du stator vaut : $Rs= 1,8\\Omega$ .\n",
+        "Ce moteur est couplé en étoile, entraine un compresseur à la fréquence de rotation de $720\\ tr/min$. Dans ces conditions, il est traversé par un courant d’intensité $I = 10\\ A$ avec un facteur de puissance égal à $0,78$ ; les pertes mécaniques valent $330\\ W$, les pertes dans le fer (localisées dans le stator) valent $470\\ W$\n",
+        "Calculer :\n",
+        "\n",
+        "1. La puissance électrique absorbée par le moteur $P_a$ ; \n",
+        "1. Les pertes par effet Joule au stator $p_{js}$ ; \n",
+        "1. La puissance transmise au rotor $P_{tr}$ ; \n",
+        "1. La fréquence de synchronisme ns; en déduire le glissement $g$ ; \n",
+        "1.  Les pertes par effet Joule au rotor $p_{jr}$ ; \n",
+        "1.  La puissance utile $P_u$; en déduire le moment du couple utile $C_u$ ; \n",
+        "1.  Le rendement du moteur. \n",
+        "1.  la valeur des capacités qui coupler en triangles ramène le facteur de puissance du moteur à $0,96$. \n",
+        "1.  la nouvelle valeur efficace du courant de ligne. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Proposed solution"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# variable initialization\n",
+        "p=8\n",
+        "Vl=660\n",
+        "f=50\n",
+        "Rs=1.8\n",
+        "Nr=720\n",
+        "Il=10\n",
+        "PF=0.78\n",
+        "phi=acos(0.78)\n",
+        "pmec=330\n",
+        "pfer=470\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The active power is:  8916.59755736458 W\n"
+          ]
+        }
+      ],
+      "source": [
+        "P=Vl*Il*np.sqrt(3)*cos(phi)\n",
+        "print ('The active power is: ', P, 'W')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Joule losses in the armature is: 540.0 W\n"
+          ]
+        }
+      ],
+      "source": [
+        "pjs= 3*Rs*Il**2\n",
+        "print ('Joule losses in the armature is:', pjs,'W')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The airgap power (tranmisted powe) is:  7906.59755736458 W\n"
+          ]
+        }
+      ],
+      "source": [
+        "Ptr=P-pjs-pfer\n",
+        "\n",
+        "print ('The airgap power (tranmisted powe) is: ', Ptr,'W')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The synchronous speed is:  750.0 rpm\n",
+            "The motor slip: 0.04\n"
+          ]
+        }
+      ],
+      "source": [
+        "Ns=120*f/p\n",
+        "print ('The synchronous speed is: ', Ns,'rpm')\n",
+        "\n",
+        "g=(Ns-Nr)/Ns\n",
+        "print ('The motor slip:', g)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Joule losses in the rotor is: 316.263902294583 W\n"
+          ]
+        }
+      ],
+      "source": [
+        "pjr=g*Ptr\n",
+        "print ('Joule losses in the rotor is:', pjr,'W')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "the output power is:  7260.33365507000 W\n",
+            "the output torque is:  96.2931658084032 W\n"
+          ]
+        }
+      ],
+      "source": [
+        "Pu=Ptr-pjr-pmec\n",
+        "\n",
+        "print ('the output power is: ', Pu,'W')\n",
+        "\n",
+        "Cu=Pu/(2*np.pi*Nr/60)\n",
+        "print ('the output torque is: ', Cu,'W')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "the motor effeciency is:  81.4249337638144 %\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('the motor effeciency is: ', Pu/P*100,'%')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The need capacitor is: 11.0900507303112 uF\n"
+          ]
+        }
+      ],
+      "source": [
+        "phi2=acos(0.96)\n",
+        "C=P*(tan(phi) -tan(phi2)) /((2*np.pi*f)*3*Vl**2)\n",
+        "print ('The need capacitor is:' , C*10**6,'uF')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The new line current: 8.12500000000000 A\n"
+          ]
+        }
+      ],
+      "source": [
+        "Il2=P/(Vl*np.sqrt(3)*cos(phi2))\n",
+        "\n",
+        "print ('The new line current:', Il2, 'A')"
       ]
     },
     {
